# cocos_plugin_test

./: .gitignore  Readme.md  package.json
assets/: scene.scene
assets/scripts/: PluginTest.ts
build-templates/: templates-version.json
build-templates/web-mobile/: index.ejs
build-templates/wechatgame/: game.ejs
build-templates/wechatgame/ccplugins/: CC_PLUGIN_TP__.js  CC_PLUGIN_TP__.wasm
native/plugins/CC_PLUGIN_TP__/: CMakeLists.txt  build_test.sh  cc_plugin.json
native/plugins/CC_PLUGIN_TP__/android/: COCOS_CC_PLUGIN_TP___glueConfig.cmake  simplelogConfig.cmake
native/plugins/CC_PLUGIN_TP__/android/arm64-v8a/include/: THREE_LIB_TP__.h
native/plugins/CC_PLUGIN_TP__/d.ts/: CC_PLUGIN_TP__.d.ts
native/plugins/CC_PLUGIN_TP__/glue/: CC_PLUGIN_TP___glue.cpp
native/plugins/CC_PLUGIN_TP__/include/: CC_PLUGIN_TP__.h  IEventHandler.h  PluginPlus.h  SimpleLog.h
native/plugins/CC_PLUGIN_TP__/ios/: COCOS_CC_PLUGIN_TP___glueConfig.cmake
native/plugins/CC_PLUGIN_TP__/src/: CC_PLUGIN_TP__.cpp  SimpleLog.cpp
native/plugins/CC_PLUGIN_TP__/web/: CMakeLists.txt  THREE_LIB_TP__Config.cmake  build_web.sh
native/plugins/CC_PLUGIN_TP__/web/include/: simple_log.h
native/plugins/CC_PLUGIN_TP__/web/post/: post.js  post.mjs
native/plugins/CC_PLUGIN_TP__/wx/: THREE_LIB_TP__-config.cmake
preview-template/: index.ejs
