cmake_minimum_required(VERSION 3.10)

set(CC_PLUGIN_NAME "CC_PLUGIN_TP__")
set(CC_THREELIB_NAME "THREE_LIB_TP__")

# add_definitions(-DCC_PLUGIN_WASM)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_COMPILER emcc)
set(CMAKE_CXX_COMPILER em++)
set(CMAKE_AR emar)
set(CMAKE_RANLIB emranlib)

project(${COCOS_PLUGIN_NAME}_wasm CXX)

set(TOTAL_MEMORY 67108864)

include(${CMAKE_CURRENT_SOURCE_DIR}/simplelogConfig.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/${CC_THREELIB_NAME}Config.cmake)

set(EMCC_LINKER_FLAGS "${CMAKE_CXX_FLAGS} \
--bind \
-s TOTAL_MEMORY=${TOTAL_MEMORY} \
-s RESERVED_FUNCTION_POINTERS=14 \
-s WASM=1 -s ALLOW_MEMORY_GROWTH=1 \
-s ASSERTIONS=0 \
-s ERROR_ON_UNDEFINED_SYMBOLS=0 \
-s DISABLE_EXCEPTION_CATCHING=1 \
-s NO_DYNAMIC_EXECUTION=1 \
-s FORCE_FILESYSTEM=1 \
-s USE_PTHREADS=0 \
-s INVOKE_RUN=0 \
-o ${CC_PLUGIN_NAME}.js")

# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTENDED_FLAGS}")

# set(CMAKE_CXX_FLAGS " -std=c++17 ${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
file(GLOB SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/../glue/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.cpp
)

add_executable(${CC_PLUGIN_NAME} ${SRC_FILES})

set_target_properties(${CC_PLUGIN_NAME} PROPERTIES LINK_FLAGS "${EMCC_LINKER_FLAGS}")
target_link_libraries(${CC_PLUGIN_NAME}
    simplelog
    ${CC_THREELIB_NAME}
)
target_compile_definitions(${CC_PLUGIN_NAME} PRIVATE CC_PLUGIN_WASM=1)

target_include_directories(${CC_PLUGIN_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# # install
# set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/dist)
# install(TARGETS ${COCOS_PLUGIN_NAME} RUNTIME DESTINATION .)
